[package]
name = "elliptic_curve_cryptography"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5" 
num-bigint = { version = "0.4.4", features=["rand"] }
sha256 = "1.4.0"  
hex = "0.4.3"


[[test]]
name = "finite_field_tests"
path = "src/tests/finite_field_tests.rs"

[[test]]
name = "elliptic_curve_tests"
path = "src/tests/elliptic_curve_tests.rs"

[[test]]
name = "ecdsa_tests" 
path = "src/tests/ecdsa_tests.rs" 


[[test]]
name = "ecdhe_tests" 
path = "src/tests/ecdhe_tests/ecdhe_tests.rs" 

[[test]]
name = "kdf2_tests" 
path = "src/tests/kdf2_tests.rs" 

[[bin]]
name = "ecdhe_demo"
path = "src/demo/ecdhe_demo.rs" 
